// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Post created by me 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    body="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor."
    createdAt={2019-02-24T00:21:15.925Z}
    guid="45b8b7af-75d2-4711-904c-5802b1c8e342"
    isMine={true}
    user={
      Object {
        "avatarUrl": "https://via.placeholder.com/96x96",
        "name": "Christopher Francisco",
        "username": "ReijiS2",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        undefined,
        <withHelpersModifiers(CardContent)>
          <withHelpersModifiers(Media)>
            <withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(Image)
                isSize="48x48"
                src="https://via.placeholder.com/96x96"
              />
            </withHelpersModifiers(MediaLeft)>
            <withHelpersModifiers(MediaContent)>
              <withHelpersModifiers(Title)
                isSize={4}
              >
                Christopher Francisco
              </withHelpersModifiers(Title)>
              <withHelpersModifiers(Subtitle)
                isSize={6}
              >
                @
                ReijiS2
              </withHelpersModifiers(Subtitle)>
            </withHelpersModifiers(MediaContent)>
          </withHelpersModifiers(Media)>
          <withHelpersModifiers(Content)>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
            <br />
            <br />
            <small>
              2/23/2019
            </small>
          </withHelpersModifiers(Content)>
        </withHelpersModifiers(CardContent)>,
        <withHelpersModifiers(CardFooter)>
          <withHelpersModifiers(CardFooterItem)
            href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit"
          >
            Edit
          </withHelpersModifiers(CardFooterItem)>
          <withHelpersModifiers(CardFooterItem)
            href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete"
          >
            Delete
          </withHelpersModifiers(CardFooterItem)>
        </withHelpersModifiers(CardFooter)>,
      ],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>,
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>,
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isSize": "48x48",
                    "src": "https://via.placeholder.com/96x96",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>,
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Christopher Francisco",
                      "isSize": 4,
                    },
                    "ref": null,
                    "rendered": "Christopher Francisco",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "isSize": 6,
                    },
                    "ref": null,
                    "rendered": Array [
                      "@",
                      "ReijiS2",
                    ],
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                <br />,
                <br />,
                <small>
                  2/23/2019
                </small>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "2/23/2019",
                },
                "ref": null,
                "rendered": "2/23/2019",
                "type": "small",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <withHelpersModifiers(CardFooterItem)
              href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit"
            >
              Edit
            </withHelpersModifiers(CardFooterItem)>,
            <withHelpersModifiers(CardFooterItem)
              href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete"
            >
              Delete
            </withHelpersModifiers(CardFooterItem)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Edit",
              "href": "/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit",
            },
            "ref": null,
            "rendered": "Edit",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Delete",
              "href": "/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete",
            },
            "ref": null,
            "rendered": "Delete",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          undefined,
          <withHelpersModifiers(CardContent)>
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>
          </withHelpersModifiers(CardContent)>,
          <withHelpersModifiers(CardFooter)>
            <withHelpersModifiers(CardFooterItem)
              href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit"
            >
              Edit
            </withHelpersModifiers(CardFooterItem)>
            <withHelpersModifiers(CardFooterItem)
              href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete"
            >
              Delete
            </withHelpersModifiers(CardFooterItem)>
          </withHelpersModifiers(CardFooter)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <withHelpersModifiers(Media)>
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>
              </withHelpersModifiers(Media)>,
              <withHelpersModifiers(Content)>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
                <br />
                <br />
                <small>
                  2/23/2019
                </small>
              </withHelpersModifiers(Content)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <withHelpersModifiers(MediaLeft)>
                    <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />
                  </withHelpersModifiers(MediaLeft)>,
                  <withHelpersModifiers(MediaContent)>
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>
                  </withHelpersModifiers(MediaContent)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isSize": "48x48",
                      "src": "https://via.placeholder.com/96x96",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <withHelpersModifiers(Title)
                        isSize={4}
                      >
                        Christopher Francisco
                      </withHelpersModifiers(Title)>,
                      <withHelpersModifiers(Subtitle)
                        isSize={6}
                      >
                        @
                        ReijiS2
                      </withHelpersModifiers(Subtitle)>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Christopher Francisco",
                        "isSize": 4,
                      },
                      "ref": null,
                      "rendered": "Christopher Francisco",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          "@",
                          "ReijiS2",
                        ],
                        "isSize": 6,
                      },
                      "ref": null,
                      "rendered": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                  <br />,
                  <br />,
                  <small>
                    2/23/2019
                  </small>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "2/23/2019",
                  },
                  "ref": null,
                  "rendered": "2/23/2019",
                  "type": "small",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <withHelpersModifiers(CardFooterItem)
                href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit"
              >
                Edit
              </withHelpersModifiers(CardFooterItem)>,
              <withHelpersModifiers(CardFooterItem)
                href="/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete"
              >
                Delete
              </withHelpersModifiers(CardFooterItem)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Edit",
                "href": "/post/45b8b7af-75d2-4711-904c-5802b1c8e342/edit",
              },
              "ref": null,
              "rendered": "Edit",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Delete",
                "href": "/post/45b8b7af-75d2-4711-904c-5802b1c8e342/delete",
              },
              "ref": null,
              "rendered": "Delete",
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Storyshots Post default 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    body="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor."
    createdAt={2019-02-24T00:21:15.925Z}
    guid="45b8b7af-75d2-4711-904c-5802b1c8e342"
    isMine={false}
    user={
      Object {
        "avatarUrl": "https://via.placeholder.com/96x96",
        "name": "Christopher Francisco",
        "username": "ReijiS2",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        undefined,
        <withHelpersModifiers(CardContent)>
          <withHelpersModifiers(Media)>
            <withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(Image)
                isSize="48x48"
                src="https://via.placeholder.com/96x96"
              />
            </withHelpersModifiers(MediaLeft)>
            <withHelpersModifiers(MediaContent)>
              <withHelpersModifiers(Title)
                isSize={4}
              >
                Christopher Francisco
              </withHelpersModifiers(Title)>
              <withHelpersModifiers(Subtitle)
                isSize={6}
              >
                @
                ReijiS2
              </withHelpersModifiers(Subtitle)>
            </withHelpersModifiers(MediaContent)>
          </withHelpersModifiers(Media)>
          <withHelpersModifiers(Content)>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
            <br />
            <br />
            <small>
              2/23/2019
            </small>
          </withHelpersModifiers(Content)>
        </withHelpersModifiers(CardContent)>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>,
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>,
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isSize": "48x48",
                    "src": "https://via.placeholder.com/96x96",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>,
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Christopher Francisco",
                      "isSize": 4,
                    },
                    "ref": null,
                    "rendered": "Christopher Francisco",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "isSize": 6,
                    },
                    "ref": null,
                    "rendered": Array [
                      "@",
                      "ReijiS2",
                    ],
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                <br />,
                <br />,
                <small>
                  2/23/2019
                </small>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "2/23/2019",
                },
                "ref": null,
                "rendered": "2/23/2019",
                "type": "small",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          undefined,
          <withHelpersModifiers(CardContent)>
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>
          </withHelpersModifiers(CardContent)>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <withHelpersModifiers(Media)>
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>
              </withHelpersModifiers(Media)>,
              <withHelpersModifiers(Content)>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
                <br />
                <br />
                <small>
                  2/23/2019
                </small>
              </withHelpersModifiers(Content)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <withHelpersModifiers(MediaLeft)>
                    <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />
                  </withHelpersModifiers(MediaLeft)>,
                  <withHelpersModifiers(MediaContent)>
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>
                  </withHelpersModifiers(MediaContent)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isSize": "48x48",
                      "src": "https://via.placeholder.com/96x96",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <withHelpersModifiers(Title)
                        isSize={4}
                      >
                        Christopher Francisco
                      </withHelpersModifiers(Title)>,
                      <withHelpersModifiers(Subtitle)
                        isSize={6}
                      >
                        @
                        ReijiS2
                      </withHelpersModifiers(Subtitle)>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Christopher Francisco",
                        "isSize": 4,
                      },
                      "ref": null,
                      "rendered": "Christopher Francisco",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          "@",
                          "ReijiS2",
                        ],
                        "isSize": 6,
                      },
                      "ref": null,
                      "rendered": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                  <br />,
                  <br />,
                  <small>
                    2/23/2019
                  </small>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "2/23/2019",
                  },
                  "ref": null,
                  "rendered": "2/23/2019",
                  "type": "small",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Storyshots Post with image 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Post
    body="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor."
    createdAt={2019-02-24T00:21:15.925Z}
    guid="45b8b7af-75d2-4711-904c-5802b1c8e342"
    imageUrl="https://via.placeholder.com/600x450"
    isMine={false}
    user={
      Object {
        "avatarUrl": "https://via.placeholder.com/96x96",
        "name": "Christopher Francisco",
        "username": "ReijiS2",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <withHelpersModifiers(CardImage)>
          <withHelpersModifiers(Image)
            isRatio="4:3"
            src="https://via.placeholder.com/600x450"
          />
        </withHelpersModifiers(CardImage)>,
        <withHelpersModifiers(CardContent)>
          <withHelpersModifiers(Media)>
            <withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(Image)
                isSize="48x48"
                src="https://via.placeholder.com/96x96"
              />
            </withHelpersModifiers(MediaLeft)>
            <withHelpersModifiers(MediaContent)>
              <withHelpersModifiers(Title)
                isSize={4}
              >
                Christopher Francisco
              </withHelpersModifiers(Title)>
              <withHelpersModifiers(Subtitle)
                isSize={6}
              >
                @
                ReijiS2
              </withHelpersModifiers(Subtitle)>
            </withHelpersModifiers(MediaContent)>
          </withHelpersModifiers(Media)>
          <withHelpersModifiers(Content)>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
            <br />
            <br />
            <small>
              2/23/2019
            </small>
          </withHelpersModifiers(Content)>
        </withHelpersModifiers(CardContent)>,
        false,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <withHelpersModifiers(Image)
            isRatio="4:3"
            src="https://via.placeholder.com/600x450"
          />,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "isRatio": "4:3",
            "src": "https://via.placeholder.com/600x450",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>,
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>,
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "isSize": "48x48",
                    "src": "https://via.placeholder.com/96x96",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": Array [
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>,
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": "Christopher Francisco",
                      "isSize": 4,
                    },
                    "ref": null,
                    "rendered": "Christopher Francisco",
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "isSize": 6,
                    },
                    "ref": null,
                    "rendered": Array [
                      "@",
                      "ReijiS2",
                    ],
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                <br />,
                <br />,
                <small>
                  2/23/2019
                </small>,
              ],
            },
            "ref": null,
            "rendered": Array [
              "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": "br",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "2/23/2019",
                },
                "ref": null,
                "rendered": "2/23/2019",
                "type": "small",
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      false,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <withHelpersModifiers(CardImage)>
            <withHelpersModifiers(Image)
              isRatio="4:3"
              src="https://via.placeholder.com/600x450"
            />
          </withHelpersModifiers(CardImage)>,
          <withHelpersModifiers(CardContent)>
            <withHelpersModifiers(Media)>
              <withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(Image)
                  isSize="48x48"
                  src="https://via.placeholder.com/96x96"
                />
              </withHelpersModifiers(MediaLeft)>
              <withHelpersModifiers(MediaContent)>
                <withHelpersModifiers(Title)
                  isSize={4}
                >
                  Christopher Francisco
                </withHelpersModifiers(Title)>
                <withHelpersModifiers(Subtitle)
                  isSize={6}
                >
                  @
                  ReijiS2
                </withHelpersModifiers(Subtitle)>
              </withHelpersModifiers(MediaContent)>
            </withHelpersModifiers(Media)>
            <withHelpersModifiers(Content)>
              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
              <br />
              <br />
              <small>
                2/23/2019
              </small>
            </withHelpersModifiers(Content)>
          </withHelpersModifiers(CardContent)>,
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <withHelpersModifiers(Image)
              isRatio="4:3"
              src="https://via.placeholder.com/600x450"
            />,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "isRatio": "4:3",
              "src": "https://via.placeholder.com/600x450",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <withHelpersModifiers(Media)>
                <withHelpersModifiers(MediaLeft)>
                  <withHelpersModifiers(Image)
                    isSize="48x48"
                    src="https://via.placeholder.com/96x96"
                  />
                </withHelpersModifiers(MediaLeft)>
                <withHelpersModifiers(MediaContent)>
                  <withHelpersModifiers(Title)
                    isSize={4}
                  >
                    Christopher Francisco
                  </withHelpersModifiers(Title)>
                  <withHelpersModifiers(Subtitle)
                    isSize={6}
                  >
                    @
                    ReijiS2
                  </withHelpersModifiers(Subtitle)>
                </withHelpersModifiers(MediaContent)>
              </withHelpersModifiers(Media)>,
              <withHelpersModifiers(Content)>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.
                <br />
                <br />
                <small>
                  2/23/2019
                </small>
              </withHelpersModifiers(Content)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <withHelpersModifiers(MediaLeft)>
                    <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />
                  </withHelpersModifiers(MediaLeft)>,
                  <withHelpersModifiers(MediaContent)>
                    <withHelpersModifiers(Title)
                      isSize={4}
                    >
                      Christopher Francisco
                    </withHelpersModifiers(Title)>
                    <withHelpersModifiers(Subtitle)
                      isSize={6}
                    >
                      @
                      ReijiS2
                    </withHelpersModifiers(Subtitle)>
                  </withHelpersModifiers(MediaContent)>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": <withHelpersModifiers(Image)
                      isSize="48x48"
                      src="https://via.placeholder.com/96x96"
                    />,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "isSize": "48x48",
                      "src": "https://via.placeholder.com/96x96",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "children": Array [
                      <withHelpersModifiers(Title)
                        isSize={4}
                      >
                        Christopher Francisco
                      </withHelpersModifiers(Title)>,
                      <withHelpersModifiers(Subtitle)
                        isSize={6}
                      >
                        @
                        ReijiS2
                      </withHelpersModifiers(Subtitle)>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": "Christopher Francisco",
                        "isSize": 4,
                      },
                      "ref": null,
                      "rendered": "Christopher Francisco",
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": Array [
                          "@",
                          "ReijiS2",
                        ],
                        "isSize": 6,
                      },
                      "ref": null,
                      "rendered": Array [
                        "@",
                        "ReijiS2",
                      ],
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                  <br />,
                  <br />,
                  <small>
                    2/23/2019
                  </small>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor nunc non metus eleifend, id ornare nulla sollicitudin. Phasellus blandit lacus vitae ullamcorper lobortis. Vivamus in neque tortor.",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "2/23/2019",
                  },
                  "ref": null,
                  "rendered": "2/23/2019",
                  "type": "small",
                },
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        false,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
